* BUG#8321 Update 'change_broker' in order to update the agent value of validated invoices if we change broker contract
* BUG#8189 Fix depends on contract broker
* BUG#7914 Remove "agents" field from product / coverage form view and add relate instead
* BUG#7875 Use initial_start_date instead of start_date in dates recalculation algorithm 
* FEA#0000 Add covered element on commission list
* OTH#0000 Update on_change_with_agent following 7755
* BUG#7755 Change the definition of the domain of 'agent' field by replacing 'start_date' by 'initial_start_date'
* FEA#7359 Add more informations on commission plans and agents to help the user understand what agents are used for a product and the hierarchy of commissions if defined
* FEA#7665 Allow to use commission start and end date in rule engine when calculation date are defined in a commission plan
* BUG#7514 Restore commission relate from contract/invoice

Version 1.14 - 2017-11-09
* FEA#7243 Enhance broker and insurer commission invoice views to remove unused or misleading fields
* BUG#7295 Commission fields should not be modifiable by a user
* FEA#7108 Do not define the payment date if the broker payment journal is not defined
* BUG#6788 Dunning generation on broker parties are not allowed
* FEA#6642 Add payment term on commission agent
* BUG#6643 Fix select_ids in commission invoice post batch
* BUG#6619 Fix management of dunnings on non-periodic invoices
* OTH#0000 Notify with a new event when a commission invoice is generated
* BUG#6445 Manually set post parameters in batch chain
* BUG#6395 Do not override payment date if a maturity date exists
* FEA#0000 Add relate on insurer and broker parties to display invoices

Version 1.12 - 2017-04-28
* FEA#0000 A commission's base amount is equal to its amount divided by its rate.
* FEA#0000 Improve performances on invoice cancellation
* FEA#0000 Add batch chain

Version 1.10 - 2016-11-02

Version 1.8 - 2016-07-06
* FEA#0000 Properly handle invoice de-reconciliation