@@ -1,3 +1,4 @@
+* FEA#8274 Force commission line split according the computation dates defined
 * BUG#8321 Update 'change_broker' in order to update the agent value of validated invoices if we change broker contract
 * BUG#8189 Fix depends on contract broker
 * BUG#7914 Remove "agents" field from product / coverage form view and add relate instead
